[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/actors/enemies/laser_robot/LaserRobot.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/actors/laser_robot.png" type="Texture" id=2]
[ext_resource path="res://scripts/classes/resources/Stats.gd" type="Script" id=3]
[ext_resource path="res://scenes/components/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/actors/enemies/laser_robot/AI.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/behavior_tree/src/blackboard.gd" type="Script" id=6]
[ext_resource path="res://scenes/components/DetectionField.tscn" type="PackedScene" id=7]

[sub_resource type="Resource" id=4]
resource_local_to_scene = true
script = ExtResource( 3 )
max_health = 1
max_mana = 0
attack = 1
defense = 0
owner_name = "laser robot"

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 1, 1, 24, 12 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 27, 1, 3, 15 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 16.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 55, 40 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8.5, 13 )

[node name="LaserRobot" type="KinematicBody2D"]
light_mask = 0
collision_layer = 16
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"collision_layer": 16,
"collision_mask": 3
}
armor_time = 1.0
stats = SubResource( 4 )
speed_cap = Vector2( 0, 30 )
snap_length = 5.0
disabled = null
gravity_enabled = true

[node name="Head" type="Sprite" parent="."]
position = Vector2( 6, 0 )
texture = SubResource( 1 )
offset = Vector2( -6, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnPoint" type="Position2D" parent="Head"]
unique_name_in_owner = true
position = Vector2( -19, 0 )

[node name="Pole" type="Sprite" parent="."]
position = Vector2( 6, 14 )
texture = SubResource( 2 )
region_rect = Rect2( 27, 1, 3, 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, 9 )
shape = SubResource( 3 )

[node name="DetectionField" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="DetectionField" index="0"]
position = Vector2( -61, 0 )
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
modulate = Color( 0, 0.25098, 1, 1 )
light_mask = 0
position = Vector2( 2.5, 8 )
collision_layer = 256

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 5 )

[node name="DetectPlayer" type="RayCast2D" parent="."]
unique_name_in_owner = true
cast_to = Vector2( -115, 0 )
collision_mask = 3

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -33, -22, 67, 47 )
__meta__ = {
"_edit_lock_": true
}

[node name="Blackboard" type="Node" parent="."]
script = ExtResource( 6 )
data = {
"aim_time": 1.0,
"charge_delay": 0.5,
"current_state": 0
}

[node name="AI" parent="." instance=ExtResource( 5 )]
_blackboard = NodePath("../Blackboard")
_agent = NodePath("..")

[connection signal="body_entered" from="DetectionField" to="." method="_on_DetectionField_body_entered"]
[connection signal="body_exited" from="DetectionField" to="." method="_on_DetectionField_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_screen_visibility" binds= [ true ]]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_visibility" binds= [ false ]]

[editable path="DetectionField"]
[editable path="Hurtbox"]
